--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=quiz.db"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
