--- a/QuizAPI.csproj
+++ b/QuizAPI.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
+    <PackageReference Include="System.ComponentModel.Composition" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
